Minor changes to elements
Changed some text and added br to labels

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="grade-labels">
             <div class="row-item subject-name-lbl">Subject Name</div>
             <div class="row-item subject-units-lbl">Subject Units</div>
-            <div class="row-item subject-grade-lbl">Subject grade (1-100)</div>
-            <div class="row-item grade-converted-lbl">Grade Converted(1-5)</div>
+            <div class="row-item subject-grade-lbl">Subject grade <br>(1-100)</div>
+            <div class="row-item grade-converted-lbl">Grade Converted <br>(1-5)</div>
             <button id="removeTableBtn">Remove table</button>
             <button id="addTableBtn">Add table</button>
         </div>
@@ -29,10 +29,10 @@
             </div>  
         </div>
         <div class="grade-labels">
-                <div class="row-item subject-name"><p>--------------------</p></div>
-                <div class="row-item subject-units"><p>----Total Units----</p></div>
-                <div class="row-item subject-grade"><p>---Grade Average---</p></div>
-                <div class="row-item grade-converted"><p>---Unit Conversion---</p></div>
+                <div class="row-item subject-name"><p>--------------</p></div>
+                <div class="row-item subject-units"><p>--Total Units--</p></div>
+                <div class="row-item subject-grade"><p>-Grade Average-</p></div>
+                <div class="row-item grade-converted"><p>-Unit Conversion-</p></div>
         </div>
         <div class="grade-labels">
                 <div class="row-item subject-name"><p></p></div>
